# projektarbeit-ii-pixelgame-team03

./: .gitignore  CMakeLists.txt  Magic  PA2.clang-format  ReadMe.md  Readme.md  TestLock  das ist ein neues Dokument.txt  hive_PROG_code-style_07-13-2024.xml
assets/data/: Workshopset.tsj  hive.tiled-session  hive_ARTI_TileAtlas.tsj  hive_ARTI_TileAtlas_2024-06-17.tsj  hive_ARTI_TileAtlas_2024-07-02.tsx  hive_DESI_GreyboxingTileset_2024-06-17.tsj  hive_DESI_Level0-Greyboxing_2024-06-17.tmj  hive_DESI_Level0-Greyboxing_2024-07-09.tmj  hive_DESI_Level0_2024-06-17.tmj  hive_DESI_Level3-Greyboxing_2024-06-17.tmj  hive_PROG_tech-demo-map_2024-07-14.tmj  level0.tmj  level0_greyboxing.tmj  level1.tmj  level1_greyboxing.tmj  level3_greyboxing.tmj  test.tmj  tileatlas.tsj  tilemap.tmj  tilemap.tmx  tileset_greyboxing.tsj
assets/graphics/: screenshot.aseprite
assets/graphics/Aseprite Files/: Tile_Atlas.aseprite  hive_ARTI_drone-selection-sceen.ase  hive_ARTI_spritesheet-worker-drone_2024-07-13.ase
assets/graphics/SpriteSheets/txt/: hive_ARTI_Colonist-Spritesheet_2024-09-05.txt  hive_ARTI_Explosive-Barrel-Spritesheet_2024-09-05.txt  (+1 more)
bilder test/: hive_ARTI_test-character_2024-04-28.aseprite
cmake/: raylib.cmake
src/: CMakeLists.txt  Init New Engine Branch  config.h.in  designConfig  first Commit  main.cpp  test
src/core/: CMakeLists.txt  InputHandler.cpp  InputHandler.h  game.cpp  game.h  letterbox.cpp  letterbox.h  qualityOfLife.h
src/core/Commands/: Command.cpp  Command.h  allCommands.h
src/core/Commands/InGameCommands/: ActionCommand.cpp  ActionCommand.h  DeathAbilityCommand.cpp  DeathAbilityCommand.h  DisconnectCommand.cpp  DisconnectCommand.h  HighlightInteractablesCommand.cpp  HighlightInteractablesCommand.h  InteractCommand.cpp  InteractCommand.h  PauseCommand.cpp  PauseCommand.h
src/core/Commands/InGameCommands/MovementCommands/: MoveDownCommand.cpp  MoveDownCommand.h  MoveLeftCommand.cpp  MoveLeftCommand.h  MoveRightCommand.cpp  MoveRightCommand.h  MoveUpCommand.cpp  MoveUpCommand.h
src/core/Commands/MenuCommands/: BackCommand.cpp  BackCommand.h  CursorDownCommand.cpp  CursorDownCommand.h  CursorLeftCommand.cpp  CursorLeftCommand.h  CursorRightCommand.cpp  CursorRightCommand.h  CursorUpCommand.cpp  CursorUpCommand.h  SelectCommand.cpp  SelectCommand.h
src/core_logic/: CMakeLists.txt  Scene.cpp  Scene.h
src/core_logic/data_processing/: DesignConfig.h  Level.cpp  Level.h  Map.cpp  Map.h  Store.cpp  Store.h  TilesonUtilities.h
src/core_logic/event_management/: Actor.cpp  Actor.h  ButtonMapping.cpp  ButtonMapping.h  Comands.cpp  Comands.h  Commands.cpp  Commands.h  Drone.cpp  Drone.h  EventHandler.cpp  EventHandler.h  EventUtilities.cpp  EventUtilities.h  InputHandler.cpp  InputHandler.h  Player.cpp  Player.h  SoundHandler.cpp  SoundHandler.h  Sprite.cpp  Sprite.h  Trigger.cpp  Trigger.h
src/core_logic/event_management/actor/: AnimatedActor.cpp  AnimatedActor.h  Drone.cpp  Drone.h  Enemy.cpp  Enemy.h  MovableActor.cpp  MovableActor.h  StaticActor.cpp  StaticActor.h
src/core_logic/event_management/actor/Drones/: Grappler.cpp  Scout.cpp  Scout.h  Worker.h
src/core_logic/event_management/actor/Enemies/: Mech.cpp  Mech.h
src/core_logic/event_management/actor/drones/: Grappler.cpp  Grappler.h  Scout.cpp  Scout.h  Worker.cpp  Worker.h
src/core_logic/event_management/actor/enemies/: Hazmat.cpp  Hazmat.h  Kolonist.cpp  Kolonist.h  Mech.cpp  Mech.h
src/core_logic/event_management/actors/: Drone.cpp  Drone.h  Enemy.cpp  Enemy.h  MovableActor.cpp  MovableActor.h
src/core_logic/event_management/actors/drones/: Grappler.cpp  Grappler.h  Scout.cpp  Scout.h  Worker.cpp  Worker.h
src/core_logic/event_management/actors/enemies/: Colonist.cpp  Colonist.h  Hazmat.h  Mech.cpp  Mech.h
src/core_logic/event_management/actors/objects/: Ability.cpp  Ability.h  Barrel.cpp  Barrel.h  Barrier.cpp  Barrier.h  Boulder.cpp  Boulder.h  CameraPan.cpp  CameraPan.h  Cliff.cpp  Cliff.h  DroneRespawnPoint.cpp  DroneRespawnPoint.h  ElevationChange.h  Interaction.cpp  Interaction.h  JumpPoint.cpp  JumpPoint.h  LevelSwitch.cpp  LevelSwitch.h  Note.cpp  Note.h  Rubble.cpp  Rubble.h  TutorialBox.cpp  TutorialBox.h  Uplink.cpp  Uplink.h  Vine.cpp  Vine.h  Water.cpp  Water.h
src/core_logic/event_management/events/: AbilityEvent.cpp  AbilityEvent.h  BellDeathAbilityEvent.cpp  BellDeathAbilityEvent.h  CheckpointEvent.cpp  CheckpointEvent.h  CleaningEvent.cpp  CleaningEvent.h  ClimbingEvent.cpp  ClimbingEvent.h  DeathAbilityEvent.cpp  DeathAbilityEvent.h  DroneDisconnectEvent.cpp  DroneDisconnectEvent.h  EnemyDisconnectEvent.cpp  EnemyDisconnectEvent.h  EnemyVisionEvent.cpp  EnemyVisionEvent.h  Event.cpp  Event.h  FallingBarrelEvent.cpp  FallingBarrelEvent.h  FallingBoulderEvent.cpp  FallingBoulderEvent.h  FallingEvent.cpp  FallingEvent.h  InteractionEvent.cpp  InteractionEvent.h  JumpEvent.cpp  JumpEvent.h  MovementEvent.cpp  MovementEvent.h  NoteEvent.cpp  NoteEvent.h  PushBarrelEvent.cpp  PushBarrelEvent.h  PushEvent.cpp  PushEvent.h  UplinkEvent.cpp  UplinkEvent.h
src/core_logic/event_management/objects/: Ability.cpp  Ability.h  Barrel.cpp  Barrel.h  Boulder.cpp  Boulder.h  Cliff.cpp  Cliff.h  ElevationChange.cpp  Interaction.cpp  Interaction.h  JumpPoint.cpp  JumpPoint.h  LevelSwitch.cpp  LevelSwitch.h  Note.cpp  Note.h  Rubble.cpp  Rubble.h  TutorialBox.cpp  TutorialBox.h  Vine.cpp  Vine.h
src/core_logic/user_interface/: AnimatedSprite.cpp  AnimatedSprite.h  HUD.cpp  HUD.h  HUDElements.cpp  HUDElements.h  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h
src/core_logic/user_interface/hud_elements/: LifeBar.cpp  LifeBar.h
src/scenes/: CMakeLists.txt  CameraPanScene.cpp  CameraPanScene.h  CreditScene.cpp  CreditScene.h  DeathScene.cpp  DeathScene.h  DroneSelectionScene.cpp  DroneSelectionScene.h  GameScene.cpp  GameScene.h  MainMenuScene.cpp  MainMenuScene.h  NoteScene.cpp  NoteScene.h  PauseScene.cpp  PauseScene.h  SettingsScene.cpp  SettingsScene.h  VictoryScene.cpp  VictoryScene.h  game_scene.cpp  game_scene.h
src/staging/: CMakeLists.txt  Game.cpp  Game.h  Stage.cpp  Stage.h
